feat: spike shim plugin

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,23 @@
-export INFURA_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-export MNEMONIC="here is where your twelve words mnemonic should be put my friend"
+# KEYS
+MAIN_PK=""
+TEST_PK=""
+INFURA_KEY=""
+ETHERSCAN_API_KEY=""
+POLYGONSCAN_API_KEY=""
 
-# Block explorer API keys
-export ARBISCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-export BSCSCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-export ETHERSCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-export OPTIMISM_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-export POLYGONSCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-export SNOWTRACE_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+# RPC
+MAINNET_RPC="https://mainnet.infura.io/v3/$INFURA_KEY"
+GOERLI_RPC="https://goerli.infura.io/v3/$INFURA_KEY"  
+MUMBAI_RPC="https://polygon-mumbai.infura.io/v3/$INFURA_KEY"
+POLYGON_RPC="https://polygon-mainnet.infura.io/v3/$INFURA_KEY"
+MAINNET_RPC="https://mainnet.infura.io/v3/$INFURA_KEY"
+
+# DEPLOYERS
+MAINNET_DEPLOYER_PK=$MAIN_PK
+POLYGON_DEPLOYER_PK=$MAIN_PK
+MUMBAI_DEPLOYER_PK=$TEST_PK
+GOERLI_DEPLOYER_PK=$TEST_PK
+
+
+
+
