--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,20 @@
-# directories
-.coverage_artifacts
-.coverage_cache
-.coverage_contracts
-artifacts
-build
-cache
-coverage
-dist
+# General
+yarn-error.log
 node_modules
-types
-deployments
+.DS_STORE
 
-# files
-*.env
-*.log
-.DS_Store
-.pnp.*
-coverage.json
-package-lock.json
-yarn.lock
+# Foundry files
+cache
+out-via-ir
+
+# Config files
+.env
+
+# Avoid ignoring gitkeep
+!/**/.gitkeep
+
+
+out/*/*
+
+# Keep the latest deployment only
+broadcast/*/*/*
